# asteroid-odyssey-py

./: .gitignore  .openapi-generator-ignore  .travis.yml  README.md  example.py  pyproject.toml  regen-docs-py.sh  regen-sdk.sh  run.py  tox.ini
.github/workflows/: claude.yml  publish.yml  python.yml
.openapi-generator/: FILES
asteroid_odyssey/: client.py
docs/: APIApi.md  BrowserSessionRecordingResponse.md  ErrorResponse.md  ExecutionApi.md  ExecutionResponse.md  ExecutionResult.md  ExecutionResultResponse.md  ExecutionStatusResponse.md  HealthCheck200Response.md  HealthCheck500Response.md  SDKApi.md  Status.md  StructuredAgentExecutionRequest.md  UploadExecutionFiles200Response.md
examples/: fetch_result.py  run.py  simple.py  triple.py
openapi_client/: __init__.py  rest.py
openapi_client/api/: execution_api.py  sdk_api.py
openapi_client/models/: __init__.py  execution_result_response.py  status.py
src/asteroid_odyssey/: __init__.py  client.py
src/asteroid_odyssey/agents_v2_gen/: __init__.py
src/asteroid_odyssey/agents_v2_gen/api/: execution_api.py
src/asteroid_odyssey/agents_v2_gen/models/: __init__.py  agents_execution_list_item.py
src/asteroid_odyssey/openapi_client/: __init__.py  api_client.py  configuration.py
src/asteroid_odyssey/openapi_client/api/: __init__.py  agent_profile_api.py  api_api.py  sdk_api.py
src/asteroid_odyssey/openapi_client/models/: __init__.py  agent_profile.py  create_agent_profile_request.py  execution_status_response.py  update_agent_profile_request.py
test/: test_api_api.py  test_browser_session_recording_response.py  test_client.py  test_error_response.py  test_execution_api.py  test_execution_response.py  test_execution_result.py  test_execution_result_response.py  test_execution_status_response.py  test_health_check200_response.py  test_health_check500_response.py  test_sdk_api.py  test_status.py  test_upload_execution_files200_response.py
tests/: test_core.py
