[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-odyssey"
version = "0.1.1"
authors = [
  { name = "David Mlcoch", email = "founders@asteroid.com" },
]
description = "A Python SDK for browser automation using Asteroid platform."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "asteroid-sdk>=0.1.19"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], exclude = ["tests*", "logs*"] } }

